--- a/res/layout/albumdisplay.xml
+++ b/res/layout/albumdisplay.xml
@@ -2,19 +2,21 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
-	<GridView  
-	    android:id="@+id/gridview"
-	    android:layout_width="fill_parent" 
-	    android:layout_height="fill_parent"
-	    android:columnWidth="145dp"
-	    android:numColumns="auto_fit"
-	    android:verticalSpacing="5dp"
-	    android:horizontalSpacing="5dp"
-	    android:stretchMode="columnWidth"
-	    android:gravity="center"
-	/>
-	<com.devspark.sidenavigation.SideNavigationView
-            android:id="@+id/side_navigation_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+
+    <GridView
+        android:id="@+id/gridview"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:columnWidth="145dp"
+        android:gravity="center"
+        android:horizontalSpacing="5dp"
+        android:numColumns="auto_fit"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="5dp" />
+
+    <com.devspark.sidenavigation.SideNavigationView
+        android:id="@+id/side_navigation_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </RelativeLayout>
