--- a/res/layout/events_tab_text.xml
+++ b/res/layout/events_tab_text.xml
@@ -5,5 +5,4 @@
     android:layout_height="wrap_content"
     android:text="Events"
     android:textColor="#fff"
-    android:textSize="12sp"
-/>
+    android:textSize="12sp" />
