--- a/res/layout/group_location.xml
+++ b/res/layout/group_location.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  android:orientation="vertical">
-    
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
+
     <com.google.android.maps.MapView
-      xmlns:android="http://schemas.android.com/apk/res/android"
-      android:id="@+id/groupLocation"
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:clickable="true"
-      android:apiKey="0alB8H6T-db781lpmO-JMXpe7_d2Uohis4iGIpw"/>
-    
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/groupLocation"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:apiKey="0alB8H6T-db781lpmO-JMXpe7_d2Uohis4iGIpw"
+        android:clickable="true" />
+
     <com.devspark.sidenavigation.SideNavigationView
-            android:id="@+id/side_navigation_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+        android:id="@+id/side_navigation_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </RelativeLayout>
