--- a/res/layout/groups_tab_text.xml
+++ b/res/layout/groups_tab_text.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/groups_tab_text"
+    android:id="@+id/groups_tab_text"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="Groups"
     android:textColor="#fff"
-    android:textSize="12sp"
-/>
+    android:textSize="12sp" />
