--- a/res/layout/viewsinglemessage.xml
+++ b/res/layout/viewsinglemessage.xml
@@ -1,80 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
-	<LinearLayout
-	  android:orientation="vertical"
-	  android:layout_width="fill_parent"
-	  android:layout_height="fill_parent">
-	
-		<LinearLayout
-		  android:id="@+id/text_layout"
-		  android:layout_width="fill_parent"
-		  android:layout_height="wrap_content"
-		  android:orientation="vertical"
-		  android:gravity="top"
-		  android:layout_weight="0">
-			<TextView
-			  android:text=""
-			  android:id="@+id/subjectText"
-			  android:layout_height="wrap_content"
-			  android:layout_width="fill_parent"
-			  android:textSize="30px"
-			  android:textColor="#FFFFFF"
-			  android:textStyle="bold">
-			</TextView>
-			
-			<TextView
-			  android:text=""
-			  android:id="@+id/senderText"
-			  android:layout_height="wrap_content"
-			  android:layout_width="fill_parent">
-			</TextView>
-			
-			<TextView
-			  android:text=""
-			  android:id="@+id/dateText"
-			  android:layout_height="wrap_content"
-			  android:layout_width="fill_parent">
-			</TextView>
-			
-			<!-- The TextView below is serving as a Horizontal Ruler between the Subject and the Body -->
-			
-			<TextView
-			  android:layout_width="fill_parent"
-			  android:layout_height="2dip"
-			  android:background="#313431"/>
-			
-			<TextView
-			  android:text=""
-			  android:id="@+id/bodyText"
-			  android:layout_height="wrap_content"
-			  android:layout_width="fill_parent"
-			  android:autoLink="web">
-			</TextView>
-		</LinearLayout>
-		
-		<LinearLayout
-		  android:layout_below="@id/text_layout"
-		  android:layout_width="fill_parent"
-		  android:layout_height="wrap_content"
-		  android:orientation="vertical"
-		  android:gravity="bottom"
-		  android:layout_weight="1">
-			<Button 
-			  android:id="@+id/replyButton"
-			  android:layout_alignParentBottom="true"
-			  android:layout_width="fill_parent"
-			  android:layout_height="wrap_content"
-			  android:text="Reply"
-			  android:layout_weight="0">
-			</Button>
-		</LinearLayout>
-	</LinearLayout>
-	<com.devspark.sidenavigation.SideNavigationView
-                android:id="@+id/side_navigation_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical" >
+
+        <LinearLayout
+            android:id="@+id/text_layout"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:gravity="top"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/subjectText"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textColor="#FFFFFF"
+                android:textSize="30px"
+                android:textStyle="bold" >
+            </TextView>
+
+            <TextView
+                android:id="@+id/senderText"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="" >
+            </TextView>
+
+            <TextView
+                android:id="@+id/dateText"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="" >
+            </TextView>
+
+            <!-- The TextView below is serving as a Horizontal Ruler between the Subject and the Body -->
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="2dip"
+                android:background="#313431" />
+
+            <TextView
+                android:id="@+id/bodyText"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:autoLink="web"
+                android:text="" >
+            </TextView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/text_layout"
+            android:layout_weight="1"
+            android:gravity="bottom"
+            android:orientation="vertical" >
+
+            <Button
+                android:id="@+id/replyButton"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_weight="0"
+                android:text="Reply" >
+            </Button>
+        </LinearLayout>
+    </LinearLayout>
+
+    <com.devspark.sidenavigation.SideNavigationView
+        android:id="@+id/side_navigation_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </RelativeLayout>
