--- a/res/xml/authenticator.xml
+++ b/res/xml/authenticator.xml
@@ -2,5 +2,4 @@
 <account-authenticator xmlns:android="http://schemas.android.com/apk/res/android"
     android:accountType="com.allplayers.android"
     android:icon="@drawable/mini_icon"
-    android:smallIcon="@drawable/mini_icon"
- />
+    android:smallIcon="@drawable/mini_icon" />
